side bar bug test

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,7 +14,11 @@
     {% if site.author -%}
       <li>
         <i class="sidebar-icon fas fa-at"></i>
-        <span class="contact-info p-name">{{ site.author | escape }}</span>
+
+<!--        <span class="contact-info p-name"> {{ site.author | escape }}</span>
+
+        <span class="contact-info p-name"> "{{ site.author | escape }}"</span>
+-->
       </li>
     {%- endif %}
     {% if site.email -%}
