--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,10 +14,8 @@
     {% if site.author -%}
       <li>
         <i class="sidebar-icon fas fa-at"></i>
-
+        <span class="contact-info p-name"> JaeHyunL</span>
 <!--        <span class="contact-info p-name"> {{ site.author | escape }}</span>
-
-        <span class="contact-info p-name"> "{{ site.author | escape }}"</span>
 -->
       </li>
     {%- endif %}
