side bar href to github rep

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,7 +14,7 @@
     {% if site.author -%}
       <li>
         <i class="sidebar-icon fas fa-at"></i>
-        <span class="contact-info p-name"> JaeHyunL</span>
+        <span class="contact-info p-name" href="https://github.com/JaeHyunL"> JaeHyunL</span>
 <!--        <span class="contact-info p-name"> {{ site.author | escape }}</span>
 -->
       </li>
