--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,13 @@
         {% assign year_string = year_from | append: '&nbsp;' | append: '-' | append: '&nbsp;' | append: year_to %}
       {% endif %}
       {% if site.author %}
-      <p>Copyright © {{ year_string }} {{ site.author }}; All rights reserved.</p>
+      <p>Copyright © {{ year_string }} {{ site.author.name }};
+         <div> 
+          Email: <a> {{site.author.email}} </a> </div> 
+        <div> 
+          참고 자료: 지킬테마 헤밀턴 <a>https://github.com/zivong/jekyll-theme-hamilton </a>
+        </div>
+          All rights reserved.</p>
       {% endif %}
     </div>
     <p>
