--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,17 +42,26 @@ layout: default
     {% if site.paginate %}
       <div class="pager">
         <ul class="pagination">
-        {%- if paginator.previous_page %}
+          <a href="/?page=1"> 맨 앞으로</a>
+          <!-- @@TODO@@ 아 졸려 내일부터 여기서 부터,.,, 페이지 네이션 기능이 부족함-->
+          <a href="/page={totla_page}"> 맨 뒤로</a>
+
+          {%- if paginator.previous_page %}
           <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{ paginator.previous_page }}</a></li>
         {%- else %}
           <li><div class="pager-edge">•</div></li>
         {%- endif %}
+        <div>{{paginator}}</div>
           <li><div class="current-page">{{ paginator.page }}</div></li>
         {%- if paginator.next_page %}
           <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">{{ paginator.next_page }}</a></li>
         {%- else %}
-          <li><div class="pager-edge">•</div></li>
+          <li><a href="{{ paginator.next_page_path  | relative_url }}" class="next2-page">{{ paginator.next_page }}</a></li>
+          <li><a href="{{ paginator.next_page_path  | relative_url }}" class="next3-page">{{ paginator.next_page }}</a></li>
+            
+        <li><div class="pager-edge">•</div></li>
         {%- endif %}
+
         </ul>
       </div>
     {%- endif %}
