--- a/_sass/hamilton/variables.scss
+++ b/_sass/hamilton/variables.scss
@@ -1,4 +1,6 @@
-// Fonts
+/* Fonts */
+@use "sass:math";
+
 $base-font-family: "Open Sans" !default;
 $reading-font-family: "Roboto Slab", "Noto Serif SC", "Noto Serif TC" !default;
 $headline-font-family: Roboto, "Noto Sans SC", "Noto Sans TC" !default;
@@ -7,7 +9,7 @@ $handwriting-font-family: "Dancing Script", "Ma Shan Zheng" !default;
 $base-font-size:    18px !default;
 $base-line-height:  1.5 !default;
 
-// Layouts
+/*  Layouts */
 $spacing-unit:      2rem !default;
 $content-width:     1100px !default;
 
