--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,40 +40,32 @@ layout: default
     </ul>
 
     {% if site.paginate %}
-      <div class="pager">
-        <ul class="pagination">
-          <!-- <div> {{ paginator }} </div>
-          <div> {{ paginator.next_page }}</div> -->
-          <li>
-            <a href="/" class="pager-edge">•</a>
-          </li>
-          {%- if {paginator.previous_page | minus:1} %}
-            <li>
-              <a href="{{ paginator.previous_page_path|minus:1 | relative_url }}" class="previous-page2">{{ paginator.previous_page|minus:1 }} </a>              
-            </li> 
-          {%- if paginator.previous_page %}
-            <li>
-              <a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{ paginator.previous_page }} </a>
-            </li>
-          {%- else %}
-        {%- endif %}
-          <li>
-            <div class="current-page"> {{ paginator.page }} </div>
-          </li>
-        {%- if paginator.next_page %}
-          <li>
-            <a href="{{ paginator.next_page_path | relative_url }}" class="next-page"> 
-              {{ paginator.next_page }} 
-            </a>
-          </li>
-        {%- else %}
-        
-        {%- endif %}
-          <li>
-            <a class="pager-edge" href="/page{{paginator.total_pages}}">•</a>
-          </li>
-        </ul>
-      </div>
+    {% if paginator.total_pages > 1 %}
+    <div class="pagination">
+      {% if paginator.previous_page %}
+        <a href="{{ paginator.previous_page_path | relative_url }}">&laquo; Prev </a>
+      {% else %}
+        <span>&laquo; Prev</span>
+      {% endif %}
+      <!-- @see https://jekyllrb-ko.github.io/docs/pagination/ -->
+      {% for page in (1.. paginator.total_pages) %}
+        {% if page == paginator.page %}
+          <em>{{ page }}</em>
+        {% elsif page == 1 %}
+          <a href="{{ paginator.previous_page_path | relative_url }}"> {{ page }} </a>
+        {% else %}
+          <a href="{{ site.paginate_path | relative_url | replace: ':num', page }}"> &nbsp; {{ page }} &nbsp; </a>
+        {% endif %}
+      {% endfor %}
+    
+      {% if paginator.next_page %}
+        <a href="{{ paginator.next_page_path | relative_url }}"> Next &raquo; </a>
+      {% else %}
+        <span>Next &raquo;</span>
+      {% endif %}
+    </div>
+    {% endif %}
+    
     {%- endif %}
 
   {%- endif -%}
